ckanext/saeoss/assets/css/saeoss.css
/* ... */
select[id$="field-dataset_custodian"]{
  background-color: #eee !important;
  opacity: 1 !important;
}

#browserAlert {
  background-color: #00000000;
}

#browserAlert .modal-header {
  display: flex;
}

#browserAlert .modal-header .modal-title {
  flex-grow: 1;
}

#browserAlert .modal-footer {
  display: flex;
}

#browserAlert label:after {
  content: "" !important;
}

/* Web Mapping */

#map{
  top: 0;
  button:0;
  margin: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  position: absolute;
}

@media screen and (max-width: 1000px) {
  .resizing {
    font-size: 0.5rem;
  }
}

@media screen and (max-width: 750px) {
  .resizing {
    font-size: 14px;
  }
}

